Fix solutions not wrapping

--- a/client/src/components/Latex/Latex.module.less
+++ b/client/src/components/Latex/Latex.module.less
@@ -1,3 +1,3 @@
 .latex {
-  white-space: pre;
+  white-space: pre-wrap;
 }
